--- a/.classpath
+++ b/.classpath
@@ -4,6 +4,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="Testes_JUnit"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="/home/clecianams/eclipse-workspace/ProjetoLP2/easyaccept.jar"/>
+	<classpathentry kind="lib" path="easyaccept.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
